<resources>
    <string name="app_name">MySunFlowers</string>
    <string name="input_account">请输入用户名</string>
    <string name="input_pass_word">请输入密码</string>
    <string name="sure_pass_word">确认密码</string>
    <string name="register_and_login">注册并登录</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="go_register">去注册</string>

    <string name="answers">问答</string>
    <string name="home">首页</string>
    <string name="mine">我的</string>
    <string name="system">体系</string>
    <string name="loading">加载中</string>

    <string name="load_error">加载失败，请点击重试</string>

    <string name="hei_hei">嘿嘿嘿</string>
</resources>