<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/color_333333"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:contentDescription="@null"
        android:src="@drawable/icon_arrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_load_bg"
        app:layout_constraintBottom_toTopOf="@id/cl_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_account"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/color_333333"
            android:textSize="15sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_load_bg"
        app:layout_constraintBottom_toTopOf="@id/cl_pwd_again"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_name"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_pass_word"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/color_333333"
            android:textSize="15sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_pwd_again"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_load_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_pwd"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/et_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/sure_pass_word"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/color_333333"
            android:textSize="15sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="28dp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:background="#A84A2C"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_pwd_again" />

    <TextView
        android:id="@+id/tv_register"
        android:textColor="#2196F3"
        android:text="@string/go_register"
        android:textSize="15sp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toRightOf="@id/bt_login"
        app:layout_constraintBottom_toBottomOf="@id/bt_login"
        app:layout_constraintTop_toTopOf="@id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>